# Yolo

./: .gitignore  README.md  cli.json  main.py  pyproject.toml
.forgejo/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.forgejo/workflows/: release.yml
modes/: image.py  webcam.py
