[project]
name = "yolo"
version = "0.1.0"
description = "A CLI-based object detection system for visual data"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opencv-python>=4.13.0.92",
    "pi-heif>=1.3.0",
    "pillow>=12.2.0",
    "questionary>=2.1.1",
    "ultralytics>=8.4.55",
]
